--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,11 @@
 @import "~bootstrap/scss/bootstrap";
 
 // My Style
-h1 {
-    color: green;
+body {
+    background-color: grey;
+    color: white;
+    height: 100vh;
+
+    display: grid;
+    place-items: center;
 }
